# gestion-facturas

./: .gitignore  CLAUDE.md  README (4).md  _diag_problemas.py  alerta_fallo.py  clasificador.py  comestibles.html  estadisticas.py  index.html  main.py  procesador_jpg.py  pyproject.toml  requirements.txt  tasca.html
.claude/: settings.local.json
.github/: copilot-instructions.md
api/: auth.py  barea_api.bat  config.py  maestro.py  runner.py  server.py
banco/: parser_n43.py  router.py
benchmark/: CLAUDE.md  benchmark_pdf.py
cli/: __init__.py
config/: __init__.py  datos_sensibles.py.example  loader.py  proveedores.py  settings.py
core/: __init__.py  config.py
data/: cuadre.json  gmail.json  maestro.json  meta.json  monitor.json  ventas_comes.json  ventas_tasca.json
datos/: DiccionarioEmisorTitulo.xlsx  DiccionarioProveedoresCategoria.xlsx  EXTRACTORES_COMPLETO.xlsx
docs/: AUDITORIA_EXTRACTORES.md  AUDITORIA_VPS_20260418.md  Actualización Proyecto Gestión Facturas.md  ESQUEMA_GESTION_FACTURAS.md  ESQUEMA_PROYECTO .md  ESQUEMA_PROYECTO_DEFINITIVO_v2_2 (1).md  ESQUEMA_PROYECTO_DEFINITIVO_v2_4.md  ESQUEMA_PROYECTO_DEFINITIVO_v2_5.md  ESQUEMA_PROYECTO_DEFINITIVO_v2_6.md  FIX_BLOQUE1_20260418.md  FLUJO_DESPLIEGUE_DASHBOARDS.md  FLUJO_MANUAL_GMAIL.md  HOOKS.md  PLAN_STREAMLIT_REORGANIZACION_v1.md  SESION_20260520_BRIEFING.md  SETUP.md  SPEC_GESTION_FACTURAS_v4.md  api.md
engines/: __init__.py
extractores/: __init__.py  _plantilla.py  abbati.py  alcampo.py  ana_caballo.py  angel_borja.py  angel_loli.py  anthropic.py  arganza.py  artesanos_mollete.py  base.py  (+85 more)
(+297 files in other folders)
