[project]
name = "gestion-facturas"
version = "5.2.0"
description = "Sistema integrado de facturación — Tasca Barea SLL"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests unitarios rápidos (sin I/O externo)",
    "integration: tests de integración (pueden usar archivos reales)",
    "slow: tests lentos (>5s)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
