[project]
name = "gestion-facturas"
version = "5.2.0"
description = "Sistema integrado de facturación — Tasca Barea SLL"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "fastapi>=0.110",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests unitarios rápidos (sin I/O externo)",
    "integration: tests de integración (pueden usar archivos reales)",
    "slow: tests lentos (>5s)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
